cqrs implementation in loans service

--- a/cqrs-with-event-sourcing/loans/src/main/resources/application.yml
+++ b/cqrs-with-event-sourcing/loans/src/main/resources/application.yml
@@ -48,7 +48,7 @@ logging:
 axon:
   eventhandling:
     processors:
-      customer-group:
+      loan-group:
         mode: subscribing
   axonserver:
     servers: localhost:8124
